--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://jijicodes.github.io/Portfolio",
+  "homepage": "https://portfolio.jennacodes.com/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -21,8 +21,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "predeploy": "yarn run build",
-    "deploy": "gh-pages -b master -d build",
+    "predeploy": "yarn run build && cp ./build/index.html ./build/me.html && cp ./build/index.html ./build/portfolio.html && cp ./build/index.html ./build/resume.html",
+    "deploy": "echo 'portfolio.jennacodes.com' > ./build/CNAME && gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
