--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "copy-to-clipboard": "^3.3.1",
     "file-saver": "^2.0.5",
     "gh-pages": "^4.0.0",
     "grommet": "^2.24.0",
